# HoneyBrain

./: .gitignore  README.md  langgraph_pipeline.py  main.py  pyproject.toml  requirements.txt  run_all_checks.ps1  state_schema.py
agentic_security_system/: README.md  main.py  requirements.txt
agentic_security_system/collectors/: file_collector.py
agentic_security_system/configs/: system_config.yaml  thresholds.yaml
agentic_security_system/ml/: pipeline_runner.py
agentic_security_system/tests/: test_pipeline.py
agentic_security_system/utils/: llm_client.py
agents/: deception_graph.py  event_enrichment.py  main.py  system_agent.py
agents/analysis/: analysis_agent.py  context_builder.py  formatter.py  parser.py  prompt_builder.py  schemas.py  validator.py
agents/cache_store/: file_cache.json  schema_cache.json
agents/context/: global_context.json
agents/deployment/: context_builder.py  decoy_registry.py  deployment_agent.py  models.py  rule_engine.py
agents/generation/: cache.py  consistency_engine.py  validators.py  (+4 more)
collectors/: auth_collector.py  file_collector.py  network_collector.py  process_collector.py
configs/: model_config.yaml
core/: context_builder.py  decision_engine.py  interception_layer.py  monitor.py
detectors/: scoring.py
logs/: logger.py
ml/: pipeline_runner.py  tempCodeRunnerFile.py
notebooks/: data_analysis.ipynb  experiments.ipynb
tests/: run_event_pipeline.py  test_analysis.py  test_deployment_agent.py  test_models.py  test_pipeline.py  test_pipeline_attacker.py  test_strategy.py
utils/: filters.py  llm_client.py
(+63 files in other folders)
