[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.0.0",
    "groq>=0.37.1",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=1.21.0",
    "openai>=2.29.0",
    "pandas>=1.3.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=5.4.0",
    "scikit-learn>=0.24.0",
    "seaborn>=0.13.2",
    "watchdog>=6.0.0",
    "xgboost>=1.5.0",
]

[tool.pyright]
include = ["."]
extraPaths = ["."]
